--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,7 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
+    <build>
+        <finalName>${project.artifactId}</finalName>
+    </build>
 </project>
